lib/src/rust_audio/frb_generated.io.dart


  late final _wire__crate__api__vad_current_statePtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function()>>(
        'frbgen_kivixa_wire__crate__api__vad_current_state',
      );
  late final _wire__crate__api__vad_current_state =
      _wire__crate__api__vad_current_statePtr
          .asFunction<WireSyncRust2DartDco Function()>();

  WireSyncRust2DartDco wire__crate__api__vad_is_speech() {
    return _wire__crate__api__vad_is_speech();
  }

  late final _wire__crate__api__vad_is_speechPtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function()>>(
        'frbgen_kivixa_wire__crate__api__vad_is_speech',
      );
  late final _wire__crate__api__vad_is_speech =
      _wire__crate__api__vad_is_speechPtr
          .asFunction<WireSyncRust2DartDco Function()>();

  WireSyncRust2DartDco wire__crate__api__vad_process(
    ffi.Pointer<wire_cst_list_prim_f_32_loose> samples,
  ) {
    return _wire__crate__api__vad_process(samples);
  }

  late final _wire__crate__api__vad_processPtr =
      _lookup<
        ffi.NativeFunction<
          WireSyncRust2DartDco Function(
            ffi.Pointer<wire_cst_list_prim_f_32_loose>,
          )
        >
      >('frbgen_kivixa_wire__crate__api__vad_process');
  late final _wire__crate__api__vad_process = _wire__crate__api__vad_processPtr
      .asFunction<
        WireSyncRust2DartDco Function(
          ffi.Pointer<wire_cst_list_prim_f_32_loose>,
        )
      >();

  WireSyncRust2DartDco wire__crate__api__vad_reset() {
    return _wire__crate__api__vad_reset();
  }

  late final _wire__crate__api__vad_resetPtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function()>>(
        'frbgen_kivixa_wire__crate__api__vad_reset',
      );
  late final _wire__crate__api__vad_reset = _wire__crate__api__vad_resetPtr
      .asFunction<WireSyncRust2DartDco Function()>();

  WireSyncRust2DartDco wire__crate__api__vad_set_threshold(double threshold) {
    return _wire__crate__api__vad_set_threshold(threshold);
  }

  late final _wire__crate__api__vad_set_thresholdPtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function(ffi.Float)>>(
        'frbgen_kivixa_wire__crate__api__vad_set_threshold',
      );
  late final _wire__crate__api__vad_set_threshold =
      _wire__crate__api__vad_set_thresholdPtr
          .asFunction<WireSyncRust2DartDco Function(double)>();

  ffi.Pointer<wire_cst_dart_transcription>
  cst_new_box_autoadd_dart_transcription() {
    return _cst_new_box_autoadd_dart_transcription();
  }

  late final _cst_new_box_autoadd_dart_transcriptionPtr =
      _lookup<
        ffi.NativeFunction<ffi.Pointer<wire_cst_dart_transcription> Function()>
      >('frbgen_kivixa_cst_new_box_autoadd_dart_transcription');
  late final _cst_new_box_autoadd_dart_transcription =
      _cst_new_box_autoadd_dart_transcriptionPtr
          .asFunction<ffi.Pointer<wire_cst_dart_transcription> Function()>();

  ffi.Pointer<wire_cst_list_String> cst_new_list_String(int len) {
    return _cst_new_list_String(len);
  }

  late final _cst_new_list_StringPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_String> Function(ffi.Int32)
        >
      >('frbgen_kivixa_cst_new_list_String');
  late final _cst_new_list_String = _cst_new_list_StringPtr
      .asFunction<ffi.Pointer<wire_cst_list_String> Function(int)>();

  ffi.Pointer<wire_cst_list_dart_transcription_segment>
  cst_new_list_dart_transcription_segment(int len) {
    return _cst_new_list_dart_transcription_segment(len);
  }

  late final _cst_new_list_dart_transcription_segmentPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_dart_transcription_segment> Function(
            ffi.Int32,
          )
        >
      >('frbgen_kivixa_cst_new_list_dart_transcription_segment');
  late final _cst_new_list_dart_transcription_segment =
      _cst_new_list_dart_transcription_segmentPtr
          .asFunction<
            ffi.Pointer<wire_cst_list_dart_transcription_segment> Function(int)
          >();

  ffi.Pointer<wire_cst_list_dart_voice_style> cst_new_list_dart_voice_style(
    int len,
  ) {
    return _cst_new_list_dart_voice_style(len);
  }

  late final _cst_new_list_dart_voice_stylePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_dart_voice_style> Function(ffi.Int32)
        >
      >('frbgen_kivixa_cst_new_list_dart_voice_style');
  late final _cst_new_list_dart_voice_style = _cst_new_list_dart_voice_stylePtr
      .asFunction<ffi.Pointer<wire_cst_list_dart_voice_style> Function(int)>();

  ffi.Pointer<wire_cst_list_prim_f_32_loose> cst_new_list_prim_f_32_loose(
    int len,
  ) {
    return _cst_new_list_prim_f_32_loose(len);
  }

  late final _cst_new_list_prim_f_32_loosePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_prim_f_32_loose> Function(ffi.Int32)
        >
      >('frbgen_kivixa_cst_new_list_prim_f_32_loose');
  late final _cst_new_list_prim_f_32_loose = _cst_new_list_prim_f_32_loosePtr
      .asFunction<ffi.Pointer<wire_cst_list_prim_f_32_loose> Function(int)>();

  ffi.Pointer<wire_cst_list_prim_f_32_strict> cst_new_list_prim_f_32_strict(
    int len,
  ) {
    return _cst_new_list_prim_f_32_strict(len);
  }

  late final _cst_new_list_prim_f_32_strictPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_prim_f_32_strict> Function(ffi.Int32)
        >
      >('frbgen_kivixa_cst_new_list_prim_f_32_strict');
  late final _cst_new_list_prim_f_32_strict = _cst_new_list_prim_f_32_strictPtr
      .asFunction<ffi.Pointer<wire_cst_list_prim_f_32_strict> Function(int)>();

  ffi.Pointer<wire_cst_list_prim_i_16_loose> cst_new_list_prim_i_16_loose(
    int len,
  ) {
    return _cst_new_list_prim_i_16_loose(len);
  }

  late final _cst_new_list_prim_i_16_loosePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_prim_i_16_loose> Function(ffi.Int32)
        >
      >('frbgen_kivixa_cst_new_list_prim_i_16_loose');
  late final _cst_new_list_prim_i_16_loose = _cst_new_list_prim_i_16_loosePtr
      .asFunction<ffi.Pointer<wire_cst_list_prim_i_16_loose> Function(int)>();

  ffi.Pointer<wire_cst_list_prim_i_16_strict> cst_new_list_prim_i_16_strict(
    int len,
  ) {
    return _cst_new_list_prim_i_16_strict(len);
  }

  late final _cst_new_list_prim_i_16_strictPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_prim_i_16_strict> Function(ffi.Int32)
        >
      >('frbgen_kivixa_cst_new_list_prim_i_16_strict');
  late final _cst_new_list_prim_i_16_strict = _cst_new_list_prim_i_16_strictPtr
      .asFunction<ffi.Pointer<wire_cst_list_prim_i_16_strict> Function(int)>();

  ffi.Pointer<wire_cst_list_prim_u_8_loose> cst_new_list_prim_u_8_loose(
    int len,
  ) {
    return _cst_new_list_prim_u_8_loose(len);
  }

  late final _cst_new_list_prim_u_8_loosePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_prim_u_8_loose> Function(ffi.Int32)
        >
      >('frbgen_kivixa_cst_new_list_prim_u_8_loose');
  late final _cst_new_list_prim_u_8_loose = _cst_new_list_prim_u_8_loosePtr
      .asFunction<ffi.Pointer<wire_cst_list_prim_u_8_loose> Function(int)>();

  ffi.Pointer<wire_cst_list_prim_u_8_strict> cst_new_list_prim_u_8_strict(
    int len,
  ) {
    return _cst_new_list_prim_u_8_strict(len);
  }

  late final _cst_new_list_prim_u_8_strictPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_prim_u_8_strict> Function(ffi.Int32)
        >
      >('frbgen_kivixa_cst_new_list_prim_u_8_strict');
  late final _cst_new_list_prim_u_8_strict = _cst_new_list_prim_u_8_strictPtr
      .asFunction<ffi.Pointer<wire_cst_list_prim_u_8_strict> Function(int)>();

  int dummy_method_to_enforce_bundling() {
    return _dummy_method_to_enforce_bundling();
  }

  late final _dummy_method_to_enforce_bundlingPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function()>>(
        'dummy_method_to_enforce_bundling',
      );
  late final _dummy_method_to_enforce_bundling =
      _dummy_method_to_enforce_bundlingPtr.asFunction<int Function()>();
}

typedef DartPort = ffi.Int64;
typedef DartDartPort = int;
typedef DartPostCObjectFnTypeFunction =
    ffi.Bool Function(DartPort port_id, ffi.Pointer<ffi.Void> message);
typedef DartDartPostCObjectFnTypeFunction =
    bool Function(DartDartPort port_id, ffi.Pointer<ffi.Void> message);
typedef DartPostCObjectFnType =
    ffi.Pointer<ffi.NativeFunction<DartPostCObjectFnTypeFunction>>;

final class wire_cst_list_prim_u_8_loose extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_list_prim_i_16_loose extends ffi.Struct {
  external ffi.Pointer<ffi.Int16> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_list_prim_f_32_loose extends ffi.Struct {
  external ffi.Pointer<ffi.Float> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_list_prim_u_8_strict extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_dart_transcription_segment extends ffi.Struct {
  @ffi.Uint32()
  external int id;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> text;

  @ffi.Float()
  external double start_time;

  @ffi.Float()
  external double end_time;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> language;

  @ffi.Float()
  external double confidence;

  @ffi.Bool()
  external bool is_final;
}

final class wire_cst_list_dart_transcription_segment extends ffi.Struct {
  external ffi.Pointer<wire_cst_dart_transcription_segment> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_dart_transcription extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_dart_transcription_segment> segments;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> language;

  @ffi.Float()
  external double duration;

  @ffi.Uint64()
  external int processing_time_ms;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> full_text;
}

final class wire_cst_list_String extends ffi.Struct {
  external ffi.Pointer<ffi.Pointer<wire_cst_list_prim_u_8_strict>> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_dart_voice_style extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> id;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> name;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> description;

  @ffi.Float()
  external double rate;

  @ffi.Float()
  external double pitch;
}

final class wire_cst_list_dart_voice_style extends ffi.Struct {
  external ffi.Pointer<wire_cst_dart_voice_style> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_list_prim_f_32_strict extends ffi.Struct {
  external ffi.Pointer<ffi.Float> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_list_prim_i_16_strict extends ffi.Struct {
  external ffi.Pointer<ffi.Int16> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_dart_synthesized_audio extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_f_32_strict> samples;

  @ffi.Uint32()
  external int sample_rate;

  @ffi.Float()
  external double duration;
}

final class wire_cst_dart_vad_result extends ffi.Struct {
  @ffi.Int32()
  external int state;

  @ffi.Float()
  external double speech_probability;

  @ffi.Bool()
  external bool is_speech;

  @ffi.Float()
  external double state_duration;
}

final class wire_cst_streaming_result extends ffi.Struct {
  external wire_cst_dart_vad_result vad;

  @ffi.Bool()
  external bool transcription_attempted;

  external ffi.Pointer<wire_cst_dart_transcription> transcription;
}

const double DEFAULT_BUFFER_DURATION_SECS = 30.0;

const int WHISPER_SAMPLE_RATE = 16000;
